data/derived/comb/progs/unify/prog7333.ml.out
Characters 174-178:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type 'a list * 'b list
       but an expression was expected of type int * int
       Type 'a list is not compatible with type int 
